--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,33 @@
-.App {
-  text-align: center;
+html {
+    scroll-snap-type: y mandatory;   /* y for vertical scroll; 
+    mandatory: always go to snap pos when not scrolling*/
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.app {
+    height: 100vh;
+    background-color: #141814;
+    /*to center anything: foll 2 lines*/
+    display: grid;
+    place-items: center;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.app__videos {
+    position: relative;
+    height: 800px;
+    border-radius: 20px;
+    overflow: scroll;
+    width: 80%;
+    max-width: 500px;  /*the max width the component can have when we to bigger screens*/    
+    scroll-snap-type: y mandatory; /*we still have to tell it where to snap to using scroll-snap-align(applied to video component)*/
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+/*Hide scrollbar for Chrome, Safari and Opera*/
+.app__videos::-webkit-scrollbar {
+    display: none;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+/*Hide scrollbar for IE, Edge and Firefox*/
+.app__videos::-webkit-scrollbar {
+    -ms-overflow-style: none; /*IE , edge*/
+    scrollbar-width: none; /*firefox*/ 
 }
