--- a/src/VideoSidebar.css
+++ b/src/VideoSidebar.css
@@ -1,11 +1,11 @@
 .videoSidebar {
     position: absolute;
-    top: 50%;
+    top: 40%;
     color: aliceblue;
     right: 10px;
 }
 
 .videoSidebar__button {
     padding: 15px;
-    /* text-align: center; */
+    text-align: center;
 }
