--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,8 @@ html {
 
 .app {
     height: 100%;
+    background-image: url("./background.png");
+    background-size: 100% 100%;
     background-color: #141814;
     /*to center anything: foll 2 lines*/
     display: grid;
@@ -18,6 +20,10 @@ html {
     margin: 3px 0;
     overflow: scroll;
     width: 80%;
+    box-shadow:
+    0 0 5px 2px #fff,  /* inner white */
+    0 0 9px 5px #f0f,  /* middle magenta */
+    0 0 13px 8px #0ff; /* outer cyan */
     max-width: 500px;  /*the max width the component can have when we to bigger screens*/    
     scroll-snap-type: y mandatory; /*we still have to tell it where to snap to using scroll-snap-align(applied to video component)*/
 }
