--- a/src/App.css
+++ b/src/App.css
@@ -24,8 +24,14 @@ html {
     0 0 5px 2px #fff,  /* inner white */
     0 0 9px 5px #f0f,  /* middle magenta */
     0 0 13px 8px #0ff; /* outer cyan */
-    max-width: 500px;  /*the max width the component can have when we to bigger screens*/    
+    max-width: 500px;  /*the max width the component can have when we to bigger screens*/ 
+    min-width: 100%;   
     scroll-snap-type: y mandatory; /*we still have to tell it where to snap to using scroll-snap-align(applied to video component)*/
+}
+
+@media only screen and (max-width: 500px) {
+   .app__videos {width: 95%};
+   .app__videos {height: 95%};
 }
 
 /*Hide scrollbar for Chrome, Safari and Opera*/
